--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "files": [],
   "scripts": {
     "quick-build": "gulp quick-build",
-    "build": "echo 0",
+    "build": "cross-env NODE_ENV=production gulp build",
     "test": "echo 0",
     "test:unit": "echo 0",
     "test:a11y": "gulp test:a11y",
