--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,13 @@ permissions:
 
 jobs:
   check:
+    if: toJSON(github.event.workflow_run.pull_requests) != "[]"
     runs-on: ubuntu-latest
     steps:
       - name: Print GitHub context
         run: echo "$GITHUB_CONTEXT"
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-      - name: check number
-        run: echo ${{ github.event.workflow_run.pull_requests[0].number }}
-      - name: check url
-        run: echo ${{ github.event.workflow_run.pull_requests[0].url }}
       - name: Get PR labels
         id: get-labels
         env:
