change if syntax

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   check:
-    if: toJSON(github.event.workflow_run.pull_requests) != "[]"
+    if: toJSON(github.event.workflow_run.pull_requests) != '[]'
     runs-on: ubuntu-latest
     steps:
       - name: Print GitHub context
