--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   workflow_run:
     workflows: ["Build, lint and test"]
     types: [completed]
+    branches-ignore: [main]
 
 permissions:
   id-token: write
@@ -14,7 +15,7 @@ permissions:
 
 jobs:
   check:
-    if: toJSON(github.event.workflow_run.pull_requests) != '[]'
+    if: ${{ toJSON(github.event.workflow_run.pull_requests) != '[]' }}
     runs-on: ubuntu-latest
     steps:
       - name: Print GitHub context
