Add status code check

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,12 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PREVIEW_DEPLOY_TOKEN }}
         run: |
-          echo id=$(gh api --method POST /repos/${{ github.repository }}/deployments -f "ref=${{ github.event.workflow_run.head_branch }}" -f "environment=dev-pages" --jq '.id') >> "$GITHUB_OUTPUT"
+          gh api -i --method POST /repos/${{ github.repository }}/deployments -f "ref=${{ github.event.workflow_run.head_branch }}" -f "environment=dev-pages" --jq '.id' > .deployment_out
+          echo status=$(cat .deployment-out | head -n 1) >> "$GITHUB_OUTPUT"
+          echo id=$(cat .deployment-out | tail -n 1) >> "$GITHUB_OUTPUT"
+      - name: Check status code
+        if: ${{ steps.create-deployment.outputs.status != 'HTTP/2.0 201 Created' }}
+        run: exit 1
       - name: Deploy dev-pages
         id: deploy
         uses: timogasda/actions/.github/actions/deploy-static@main
@@ -66,15 +71,15 @@ jobs:
           target-path: dev-pages
           commit-sha: ${{ github.event.workflow_run.head_sha }}
           cloudfront-host: d1ygrbexbkwxpo.cloudfront.net
-      - name: Set deployment status (success)
-        if: success()
-        env:
-          GH_TOKEN: ${{ secrets.PREVIEW_DEPLOY_TOKEN }}
-        run: |
-          gh api --method POST /repos/${{ github.repository }}/deployments/${{ steps.create-deployment.outputs.id }}/statuses -f "state=success" -f "log_url=${{ steps.deploy.outputs.preview-url }}index.html"
       - name: Set deployment status (failure)
         if: failure()
         env:
           GH_TOKEN: ${{ secrets.PREVIEW_DEPLOY_TOKEN }}
         run: |
           gh api --method POST /repos/${{ github.repository }}/deployments/${{ steps.create-deployment.outputs.id }}/statuses -f "state=failure"
+      - name: Set deployment status (success)
+        if: success()
+        env:
+          GH_TOKEN: ${{ secrets.PREVIEW_DEPLOY_TOKEN }}
+        run: |
+          gh api --method POST /repos/${{ github.repository }}/deployments/${{ steps.create-deployment.outputs.id }}/statuses -f "state=success" -f "log_url=${{ steps.deploy.outputs.preview-url }}index.html"
