--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,11 +55,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PREVIEW_DEPLOY_TOKEN }}
         run: |
-          touch .deployment_out
           gh api -i --method POST /repos/${{ github.repository }}/deployments -f "ref=${{ github.event.workflow_run.head_branch }}" -f "environment=dev-pages" --jq '.id' > .deployment_out
-          ls -lah
-          echo status=$(cat .deployment-out | head -n 1) >> "$GITHUB_OUTPUT"
-          echo id=$(cat .deployment-out | tail -n 1) >> "$GITHUB_OUTPUT"
+          echo status=$(cat .deployment_out | head -n 1) >> "$GITHUB_OUTPUT"
+          echo id=$(cat .deployment_out | tail -n 1) >> "$GITHUB_OUTPUT"
       - name: Check status code
         if: ${{ steps.create-deployment.outputs.status != 'HTTP/2.0 201 Created' }}
         run: exit 1
