--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
       - name: test condition
         run: echo "${{ toJSON(github.event.workflow_run.pull_requests) == '[]' }}"
