check boolean vars

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,10 @@ jobs:
     if: |
       always() && (needs.check-branch.outputs.can-deploy || needs.check-fork.outputs.can-deploy)
     steps:
+      - run: |
+        echo ${{ needs.check-branch.outputs.can-deploy }}
+        echo ${{ needs.check-fork.outputs.can-deploy }}
+        echo ${{ needs.check-branch.outputs.can-deploy || needs.check-fork.outputs.can-deploy }}
       - uses: actions/download-artifact@v4
         with:
           name: dev-pages
