--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,6 @@ on:
   workflow_run:
     workflows: ["Build, lint and test"]
     types: [completed]
-    # branches-ignore: [main]
 
 permissions:
   id-token: write
@@ -14,6 +13,8 @@ permissions:
   deployments: write
 
 jobs:
+  # This job runs when the PR was created from a branch, not a fork.
+  # In this case, deployments are always allowed so we output "can-deploy=true"
   check-branch:
     if: ${{ toJSON(github.event.workflow_run.pull_requests) != '[]' }}
     runs-on: ubuntu-latest
@@ -23,16 +24,15 @@ jobs:
       - name: Can deploy from a branch
         run: echo "All good!"
 
+  # This job runs when the PR was created from a fork.
+  # In this case we check the existence of the "allow previews" label to determine the "can-deploy" output
   check-fork:
     if: ${{ toJSON(github.event.workflow_run.pull_requests) == '[]' }}
     runs-on: ubuntu-latest
     outputs:
       can-deploy: ${{ steps.check-label.outputs.result }}
     steps:
-      - name: Print GitHub context
-        run: echo "$GITHUB_CONTEXT"
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
+      # For forks, the PR context is not part of the event data. So we determine the PR number by looking up the head commit SHA.
       - name: Get PR number
         id: get-pr
         env:
@@ -42,6 +42,7 @@ jobs:
       - run: echo "$number"
         env:
           number: ${{ steps.get-pr.outputs.number }}
+      # Retrieve a list of labels for the PR
       - name: Get PR labels
         id: get-labels
         env:
@@ -52,21 +53,18 @@ jobs:
       - run: echo "$labels"
         env:
           labels: ${{ steps.get-labels.outputs.labels }}
+      # Set the output based on the existance of the preview label
       - name: Check if preview label is attached
         id: check-label
-        # if: ${{ !contains(steps.get-labels.outputs.labels, 'allow previews') }}
         run: echo "result=${{ contains(steps.get-labels.outputs.labels, 'allow previews') }}" >> "$GITHUB_OUTPUT"
 
+  # Run the deployment job if either of the previous jobs ran and returned true
   deploy:
     runs-on: ubuntu-latest
     needs: [check-branch, check-fork]
     if: |
       always() && (needs.check-branch.outputs.can-deploy == 'true' || needs.check-fork.outputs.can-deploy == 'true')
     steps:
-      - run: |
-          echo ${{ needs.check-branch.outputs.can-deploy }}
-          echo ${{ needs.check-fork.outputs.can-deploy }}
-          echo ${{ needs.check-branch.outputs.can-deploy || needs.check-fork.outputs.can-deploy }}
       - uses: actions/download-artifact@v4
         with:
           name: dev-pages
